[gd_scene load_steps=10 format=3 uid="uid://ch3hvmt7os3r7"]

[ext_resource type="Script" path="res://exit.gd" id="1_2n8w4"]
[ext_resource type="Script" path="res://new.gd" id="1_k7l3d"]
[ext_resource type="Theme" uid="uid://dr82228au0xj7" path="res://mm.tres" id="1_oq03v"]
[ext_resource type="Script" path="res://options.gd" id="3_uvaau"]
[ext_resource type="Animation" uid="uid://bs03jh87uqb01" path="res://hover.res" id="4_2rlgp"]

[sub_resource type="Animation" id="Animation_48pkv"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("VBoxContainer/new:theme_override_font_sizes/font_size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [16]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("VBoxContainer/options:theme_override_font_sizes/font_size")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [16]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("VBoxContainer/exit:theme_override_font_sizes/font_size")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [16]
}

[sub_resource type="Animation" id="Animation_dmbqw"]
resource_name = "hover_ex"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("VBoxContainer/exit:theme_override_font_sizes/font_size")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [16, 32]
}

[sub_resource type="Animation" id="Animation_7e10v"]
resource_name = "hover_op"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("VBoxContainer/options:theme_override_font_sizes/font_size")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [16, 32]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_lnf1v"]
_data = {
"RESET": SubResource("Animation_48pkv"),
"hover": ExtResource("4_2rlgp"),
"hover_ex": SubResource("Animation_dmbqw"),
"hover_op": SubResource("Animation_7e10v")
}

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -45.0
offset_top = -81.5
offset_right = 45.0
offset_bottom = 81.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 35

[node name="new" type="Button" parent="VBoxContainer"]
clip_contents = true
layout_mode = 2
theme = ExtResource("1_oq03v")
theme_override_font_sizes/font_size = 16
text = "New game"
script = ExtResource("1_k7l3d")

[node name="options" type="Button" parent="VBoxContainer"]
clip_contents = true
layout_mode = 2
theme = ExtResource("1_oq03v")
theme_override_font_sizes/font_size = 16
text = "Options"
script = ExtResource("3_uvaau")

[node name="exit" type="Button" parent="VBoxContainer"]
clip_contents = true
layout_mode = 2
theme = ExtResource("1_oq03v")
theme_override_font_sizes/font_size = 16
text = "Exit"
script = ExtResource("1_2n8w4")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_lnf1v")
}

[connection signal="mouse_entered" from="VBoxContainer/new" to="VBoxContainer/new" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="VBoxContainer/new" to="VBoxContainer/new" method="_on_mouse_exited"]
[connection signal="pressed" from="VBoxContainer/new" to="VBoxContainer/new" method="_on_pressed"]
[connection signal="mouse_entered" from="VBoxContainer/options" to="VBoxContainer/options" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="VBoxContainer/options" to="VBoxContainer/options" method="_on_mouse_exited"]
[connection signal="mouse_entered" from="VBoxContainer/exit" to="VBoxContainer/exit" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="VBoxContainer/exit" to="VBoxContainer/exit" method="_on_mouse_exited"]
[connection signal="pressed" from="VBoxContainer/exit" to="VBoxContainer/exit" method="_on_pressed"]
